tests/hiarc_tests/compile-fail/safe_rc.stderr
error[E0133]: call to unsafe function is unsafe and requires unsafe function or block
  --> tests/hiarc_tests/compile-fail/safe_rc.rs:15:13
   |
15 |             self.0.borrow_mut()
   |             ^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
